@@ -474,7 +474,7 @@ EOT
 
 			    # SKIP is essentially the same as TODO for t/TEST
 			    # this still conforms to TAP:
-			    # http://search.cpan.org/dist/Test-Harness/lib/Test/Harness/TAP.pod
+			    # http://search.cpan.org/dist/TAP/TAP.pod
 			    $extra and $istodo = $extra =~ /#\s*(?:TODO|SKIP)\b/;
 			    $istodo = 1 if $todo{$num};
 
